--- a/.config/config.json
+++ b/.config/config.json
@@ -7,6 +7,7 @@
   "groupChatKey": "-c",
   "grpReplyMode": true,
   "grpCitationMode": true,
+  "prvReplyAlways": true,
   "privateChatKey": "-c",
   "prvReplyMode": true,
   "prvCitationMode": false,
