--- a/.config/config.json
+++ b/.config/config.json
@@ -20,6 +20,7 @@
   "isCached": true,
 
   "helpKey": "-h",
+  "imageHelpKey": true,
   "resetChatKey": "-rs",
   "regenerateKey": "-rg",
   "rollbackKey": "-rb"
