--- a/.config/config.json
+++ b/.config/config.json
@@ -14,6 +14,7 @@
   "conclusionKey": "-z",
 
   "stableDiffRly": true,
+  "stableDiffVer": "SDXL",
   "groupImgKey": "-i",
   "privateImgKey": "-i",
   "negativePromptKey": "-n",
