add luosiallen/latent-consistency-model in generations

--- a/.config/config.json
+++ b/.config/config.json
@@ -17,6 +17,8 @@
   "stableDiffVer": "SDXL",
   "groupImgKey": "-i",
   "privateImgKey": "-i",
+  "replicateGroupImgKey": "/ir",
+  "replicatePrivateImgKey": "/ir",
   "negativePromptKey": "-n",
   "isCached": true,
 
